--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,6 @@
     <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon.png" />
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
-    <script src="//cdn.ably.io/lib/ably.min-1.js"></script>
 
     <title>Green Acorn App</title>
 </head>
@@ -51,19 +50,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
-<script>
-    /*
-    var ably = new Ably.Realtime('k6lRPA.cucUtg:XLmTdAyYrblIBpKP');
-    ably.connection.on('connected', function() {
-        console.log("That was simple, you're now connected to Ably in realtime");
-    });
 
-    console.log("conectadon con GA")
-    var channel = ably.channels.get('GA');
-    channel.subscribe('pagos', function(message) {
-        console.log("Received a greeting message in realtime: " + message.data);
-    });
-    */
-</script>
+    <script>
+        if('serviceWorker' in navigator) {
+            navigator.serviceWorker
+                .register('/sw.js')
+                .then(function() { console.log("Service Worker Registered"); });
+        }
+    </script>
+</body>
 </html>
